<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Indoor Positioning System 2.0</string>
    <string name="action_settings">Settings</string>
    <string name="sm">Show Map</string>
    <string name="fp">fp</string>
    <string name="title_activity_maps">Map</string>
    <string name="indooratlas_floor_plan_id"></string>
    <string name="cp">cp</string>
    <string name="gpsmap">GPS map</string>
    <string name="fph">fp</string>
    <string name="bdt">blue dot</string>
    <string name="tv">Search by book name:</string>
    <string name="hr">header</string>
    <string name="tv2">Search by call number:</string>
    <string name="tv3">Search by author name:</string>
    <string name="bs">bs</string>
    <string name="ips">ips</string>
    <string name="bi">bi</string>
    <string name="gp">gps</string>
    <string name="reset">reset</string>
    <string name="help">Help</string>
    <string name="more">More</string>
    <string name="helpt">Help</string>
    <string name="feedback">Feedback</string>
    <string name="helpq">Help</string>
    <string name="feedbackt">feedback</string>
    <string name="bl">Book Locator</string>
    <string name="tv4">Search by ISBN:</string>
    <string name="newtv2">Search by author name:</string>
    <string name="newtv3">Search by call number:</string>
    <string name="sd">Show Database</string>
    <string name="bt">Enter book title</string>
    <string name="an">Enter full author name</string>
    <string name="cn">Enter call number</string>
    <string name="in">Enter ISBN</string>
    <string name="sh">Search History</string>
    <string name="fi">Flip Image</string>
    <string name="holding">holding</string>
    <string name="general">General guide:</string>
    <string name="ipsguide">Indoor Positioning System guide:</string>
    <string name="one">1. To use the application, make sure that you are connected to the internet.</string>
    <string name="two">2. The application can take 5 to 10 seconds to load the information of the book depending on the speed of your wi-fi connection.</string>
    <string name="three">3. When typing in one of the search-fields, if no suggestion is shown up then the book you are looking for is not in the database.</string>
    <string name="four">4. If you are not inside the library, you can use Global Positioning System to locate where the library is.</string>
    <string name="five">1. To use the Indoor Positioning System, make sure you have a solid internet connection and 3G/4G mobile network.</string>
    <string name="six">2. Indoor Positioning System requires three sensors which are: accelerometer, compass, and gyroscope. If any of the sensors are missing from your smartphone then the Indoor Positioning System will not work.</string>
    <string name="seven">3. To verify if your smartphone has these sensors, download the below application called \"Sensor Box for Android\":</string>
    <string name="eight">4. The application is portrait mode only and when you are inside Indoor Positioning System mode, make sure to hold your phone straight ahead in front of you and walk along:</string>
    <string name="nine">5. Do not hold the phone in landscape mode or else the Indoor Positioning may not work.</string>
    <string name="ten">6. When the Indoor Positioning System is started, the blue dot may take a small amount of time to converge to your actual position.</string>
    <string name="eleven">7. The Indoor Positioning System only works inside the library, and if you click on \"Indoor Map\" outside the library, the application will keep loading until you are inside the library. To go back to home screen,double tap the back button.</string>
    <string name="twelve">8. The red balloon which points to one of the bookshelves shows where your book is located.</string>
    <string name="noname">appstoreapp</string>

    <!--<string name="noname">15dp</string>-->
</resources>
